# universal

./: bazel-out  package.json
modules/aspnetcore-engine/: BUILD.bazel  package.json
modules/aspnetcore-engine/src/: main.ts  platform-server-utils.ts
modules/aspnetcore-engine/tokens/: BUILD.bazel  package.json
modules/common/: BUILD.bazel
modules/common/src/: transfer_http.ts
modules/express-engine/: BUILD.bazel
modules/express-engine/src/: main.ts
modules/express-engine/tokens/: BUILD.bazel  package.json
modules/hapi-engine/: BUILD.bazel
modules/hapi-engine/src/: main.ts
modules/hapi-engine/tokens/: BUILD.bazel
modules/module-map-ngfactory-loader/: BUILD.bazel
