load(
    "//tools:defaults.bzl",
    "ts_library",
    # "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "aspnetcore-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//modules/aspnetcore-engine/tokens",
        "@rxjs",
    ],
)

ng_package(
    name = "@nguniversal/aspnetcore-engine",
    srcs = [
        ":package.json",
        "//modules/aspnetcore-engine/tokens:package.json",
    ],
    entry_point = "index.js",
    secondary_entry_points = ["tokens"],
    deps = [":aspnetcore-engine"],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":aspnetcore-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
