load(
    "//tools:defaults.bzl",
    "ts_library",
    "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "common",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [],
)

ng_package(
    name = "npm_package",
    srcs = [":package.json"],
    entry_point = "index.js",
    deps = [":common"],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":common",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
