load(
    "//tools:defaults.bzl",
    "ts_library",
    # "ng_module",
    "ng_package",
)

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "hapi-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//modules/hapi-engine/tokens",
        "@rxjs",
    ],
)

ng_package(
    name = "@nguniversal/hapi-engine",
    srcs = [
        ":package.json",
        "//modules/hapi-engine/tokens:package.json",
    ],
    entry_point = "index.js",
    secondary_entry_points = ["tokens"],
    deps = [":hapi-engine"],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":hapi-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
